package sfedu.xast;

public enum Status {
    COMPLETED,
    IN_PROCESS,
    CANCELED
}
